--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -5,8 +5,8 @@
 
                 header {
                     background-color: #ff0000;
-                    height 70px;
-                    width 100%;
+                    height: 70px;
+                    width: 100%;
                 }
 
                 body {
@@ -20,7 +20,7 @@
                     justify-content: center;
                     align-items: center;
                     bottom: 0;
-                    background-color: 00ff00;
+                    background-color: #00FF00;
                     height: 60px;
                     width: 100%;
                 }
